HOT FIX - issue 9 -login box on mobile dashboard (not connected)

--- a/resources/assets/less/includes/pages/dashboard.less
+++ b/resources/assets/less/includes/pages/dashboard.less
@@ -434,6 +434,10 @@
 		.not-connected{
 			.colored-panel{
 				height:450px;
+
+				@media @phone {
+					height:475px;
+				}
 			}
 
 			> .col-sm-6{
